# conan-qt6-demo

./: .gitignore  CMakeLists.txt  conanfile.txt  readme.md  run.sh
conan/: CMakeLists.txt  conanfile.txt  readme.md
conan/src/: main.cpp
hunter/: .gitignore  CMakeLists.txt  readme.md
hunter/cmake/: dependencies.cmake
hunter/cmake/Hunter/: config.cmake  init.cmake
hunter/src/: main.cpp
src/: main.cpp
